<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/login"
            android:title="@string/nav_signup" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/find" />
        <item
            android:id="@+id/nav_addhostel"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_hostel" />
        <item
            android:id="@+id/nav_managehostel"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manage_hostels" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>
