<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="20dp">


    <ImageView
        android:id="@+id/edit_item_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="2"
        android:contentDescription="@string/item_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/busy_indicator" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_item_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_address"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/item_address"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_city"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/item_city"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_rooms"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/item_rooms"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_rating"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/item_rating"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_floors"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/items_floors"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/edit_item_extras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_extras"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>