<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:paddingTop="20dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hostelData_hostelName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/hosteldata_name"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lable_roomsAvailible"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:text="@string/hosteldata_rooms_availble"
                        android:textColor="@color/colorWhite" />

                    <EditText
                        android:id="@+id/hostelData_no_rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/hosteldata_no_of_rooms"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lable_floorAvailible"
                        android:layout_width="135dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:text="@string/hosteldata_floors_available"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/hostelData_no_floors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/hosteldata_no_of_floors"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lable_extraFac"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:text="@string/hosteldata_extra_facilities"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/hostelData_extras"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/hosteldata_extra_details"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:width="130dp"
        android:background="@color/blue"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:background="@color/blue"
        android:text="Delete"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>