<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_img"
			android:tint="@color/blue"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="@string/name" />

            <TextView
                android:id="@+id/user_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/rate"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/user_comment"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="45dp"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/comment" />

</LinearLayout>
