<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/list_item_myitem"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/busy_indicator" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:text="@string/item_name"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/start_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/img_reviewstar" />

            <TextView
                android:id="@+id/item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_rating"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>